# FRIDGEFREENET

./: .gitignore  .gitmodules  CONVERSION_SUMMARY.md  DEPLOYMENT_GUIDE.md  INSTALLATION.md  LICENSE  MANIFEST.in  MILESTONE_1_SUMMARY.md  OpenCode_PLATFORM.md  README.md  README_HuggingFace.md  README_MCP_Integration.md  README_PACKAGE.md  README_literature_mining.md  README_memory.md  README_webapp.md  REVAMP_PLAN.md  app.py  app_hf.py  chatbot_system.py  cleanup_clutter.py  config.py  demo_intelligent_mining.py  demo_literature_mining.py  demo_mcp_enhancement.py  demo_memory_chatbot.py  dual_gaff_amber_md_simulation.py  env.template  env_example.txt  environment-openmm.yml  environment-simple.yml  environment-simulation.yml  environment.yml  install  install_dependencies.sh  insulin_ai_app.py  insulin_ai_cli.py  insulin_ai_mcp_server.py  insulin_comprehensive_analyzer.py  interactive_mining.py  (+42 more)
.opencode/: opencode.jsonc
.opencode/agent/: autoresearch-materials.md  materials-discovery.md
.opencode/skills/: active-learning.md  autonomous-discovery.md
.streamlit/: config.toml
active_learning_results/: iteration_1_results.json  iteration_2_results.json  iteration_3_results.json  iteration_4_results.json  iteration_5_results.json
app/: __init__.py  insulin_ai_app.py  insulin_ai_app_backup.py
app/services/: psmiles_service.py
app/ui/: navigation.py  psmiles_generation_ui.py  simulation_ui.py
app/utils/: app_utils.py  pdb_utils.py  psmiles_smiles_storage.py  psmiles_workflow_utils.py  psp_utils.py  validation_utils.py
benchmarks/: _external_paths.py  comparison_results_study.tsv  ibm_insulin_env.py  ibm_insulin_rl_benchmark.py  md_benchmark.py  optuna_psmiles_discovery.py  precompute_psmiles_cache.py  run_paper_study.sh
chat_memory/: c419d109-f223-4fc6-903c-3141036dcea4_general.pkl  c419d109-f223-4fc6-903c-3141036dcea4_research.pkl  test_session_general.pkl  test_session_research.pkl
core/: chatbot_system.py  enhanced_chemical_repair.py  interactive_mining.py  literature_mining_system.py  psmiles_diversification.py  psmiles_generator.py  psmiles_processor.py  semantic_scholar_search.py  semantic_scholar_server.py
docs/: BENCHMARK_AND_REPRO_STUDY.md  DEPENDENCIES.md  GROMACS_TOPOLOGY.md  MATRIX_PACKMOL_GROMACS.md  MCP_GETTING_STARTED.md  MCP_SERVERS.md  MMGBSA_FEATURE_DOCUMENTATION.md  MMGBSA_USER_GUIDE.md  OPENMM_SCREENING.md  OpenCode_PLATFORM.md  PAPER_AGENTIC_EXPERIMENTS.md  POST_PROCESSING_FEATURE_DOCUMENTATION.md  PROJECT_STRUCTURE.md  PSMILES_GUIDE.md  SECURITY.md  SUMMARY_LLM_REPAIR_IMPLEMENTATION.md  SUMMARY_REPORT_STYLE.md  THIRD_PARTY_BENCHMARKS.md  api_reference.md  env_example.txt  method_notes.md  proposal.tex
docs/archive/: README.md  REVAMP_OPENCODE_BASE.md  REVAMP_PLAN.md
integration/: langchain_md_rag.py
integration/analysis/: COMPLETE_SOLUTION_SUMMARY.md  comprehensive_postprocessing.py  final_polymer_fix.py  fix_polymer_simulation.py  insulin_comprehensive_analyzer.py  insulin_delivery_analysis_integration.py  insulin_mmgbsa_calculator.py  insulin_polymer_builder.py  md_simulation_integration.py  openmm_md_enhanced.py  openmm_md_mixed_system.py  openmm_md_simulator.py  packmol_embedder.py  polymer_solution_final.py  simple_md_integration.py  simple_mmgbsa_calculator.py  simple_working_md_simulator.py  simplified_mmgbsa_calculator.py  streamlined_md_integration.py
integration/corrections/: instant_psmiles_corrector.py  psmiles_auto_corrector.py
mcp_servers/: mcp_lit_arxiv.py  mcp_lit_pubmed.py  mcp_lit_semantic_scholar.py  mcp_psmiles_ramprasad.py
paper/: .gitignore  apssamp.tex  apssamp_imports.tex  compile.sh  compile_apssamp.sh  paper.tex  references.bib
requirements/: requirements.txt  requirements_enhanced_api.txt  requirements_langchain.txt  requirements_streamlit.txt
results/: ibm_dqn_seed123.json  ibm_dqn_seed42.json  ibm_dqn_seed456.json
scripts/: diagnose_gromacs_complex.py  diagnose_gromacs_matrix.py  diagnose_openmm_complex.py  generate_paper_chemviz_figure.py  index_papers.sh  prepare_gromacs_insulin_topology.sh  render_complex_chemviz.py  run_autonomous_discovery.py  run_mcp_server.sh  run_openmm_matrix.py
src/insulin_ai/: __init__.py  app.py  cleanup_clutter.py  cli.py  custom_solvent_examples.py  debug_code_path.py  debug_diversification.py  dependenceies.py  generate_smiles_from_pdb.py  install_dependencies.sh  insulin_polymer_final.py  insulin_polymer_final_working.py  insulin_polymer_proper.py  insulin_polymer_simple.py  insulin_polymer_simulation.py  insulin_polymer_simulation_fixed.py  insulin_polymer_working.py  insulin_polymer_working_v2.py  main.py  md_simulation_integration.py  mmgbsa_test.py  old_app.py  openmm_solvate.py  openmm_test_implicit_gbn2.py  polymer_simulation.py  polymer_simulation_verbose.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: debug_systemgenerator_issue.py  demo_comprehensive_analysis.py  final_unl_diagnosis.py  manual_autocorrector_test.py  simple_streamlit_fix.py  test_chemviz_complex.py  test_discovery_report.py  test_feedback_loop.py  test_functional_groups.py  test_gromacs_complex.py  test_ibm_insulin_env.py  test_insulin_polymer_packing.py  test_literature.py  test_matrix_density.py  test_matrix_gromacs.py  test_mcp_servers.py  test_mdsimulator_eval.py  test_mutation.py  test_openmm_complex.py  test_optuna_psmiles_benchmark.py  test_psmiles.py  test_pymol_complex_viz.py  test_scoring.py  test_simulation.py
utils/: debug_tracer.py  direct_polymer_builder.py  natural_language_smiles.py
(+229 files in other folders)
