[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insulin-ai"
version = "0.2.0"
description = "AI-Driven Design of Fridge-Free Insulin Delivery Patches - Code-as-Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [{name = "Insulin AI Team"}]
keywords = ["materials", "insulin", "PSMILES", "molecular dynamics", "active learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.scripts]
insulin-ai = "insulin_ai.cli:main"

[project.optional-dependencies]
simulation = [
    "openmm>=8.0",
    "openmmforcefields>=0.14.0",
    "openff-toolkit>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["insulin_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
