[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insulin-ai"
version = "0.2.0"
description = "AI-Driven Design of Fridge-Free Insulin Delivery Patches - Code-as-Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Insulin AI Team"}]
keywords = ["materials", "insulin", "PSMILES", "openmm", "active learning"]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "requests>=2.28.0",
    "duckduckgo-search>=8.0.0",
    "packmol>=21.0",
    "psmiles @ git+https://github.com/FermiQ/psmiles.git",
    "fpdf2>=2.8.0",
    "markdown>=3.5",
]
# Full pip list (conda + pip): see requirements.txt and environment-simulation.yml
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
openmm = [
    "openmm",
    "openmmforcefields>=0.14.0",
    "openff-toolkit>=0.18.0",
    "pdbfixer",
    "rdkit",
]
simulation = [
    "rdkit",
    "openmm",
    "openmmforcefields>=0.14.0",
    "openff-toolkit>=0.18.0",
    "pdbfixer",
]
paperqa = [
    "paper-qa>=2026.2",
]
benchmark = [
    "optuna>=3.0",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["insulin_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
